# twi-scanner

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cxx-src/: SerialManager.cpp  SerialManager.h  e.txt  ft4222.cpp  ft4222.hpp  i2cscanner.cpp  i2cscanner.hpp  main.cpp  rtccontroller.cpp  rtccontroller.hpp
cxx-src/ssd1306/: fonts.c  fonts.h  ssd1306.cpp  ssd1306.h
deploy/: deploy.sh  deploy_qt.sh
qml-src/: Main.qml  SI7210Window.qml
src/: main.cpp
src/cli/: Cli.cpp  Cli.hpp  CommandRouter.cpp  CommandRouter.hpp  Commands.cpp  Commands.hpp  ParseUtil.cpp  ParseUtil.hpp
src/context/: AppContext.hpp
src/ft4222/: ft4222.cpp  ft4222.hpp  ft4222_mock.cpp  ft4222_types.hpp
tests/: test_parse.cpp  test_router.cpp
